/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2020-06-08 10:00 UTC+0200 Wilfried Brunken DF7BE
  * install.txt
  * source\winapi\hmonthc.prg
  * source\winapi\control.c
  * source\winapi\dialog.c
  * source\winapi\draw.c
  * makemngw64.bat (New)
  * samples\bldmingw64.bat
  * samples\a.rc
  * source\winapi\grid.c
  * source\winapi\listbox.c
  * source\winapi\nice.c
  * source\winapi\resource.c
  * source\winapi\richedit.c
  * source\gtk\listbox.c
  * samples/Readme.txt
  * samples/dev/MinGW64/MinGW64.txt
    ! 
    ! Task:
    ! Support for MinGW64
    ! (to be continued)
    ! - Added compiler switch
    !   "if ... defined(__MINGW64__)"
    ! - Scripts for compile of
    !   libs and samples updated
    ! - Docu updated.
    ! In general, nevertheless these much
    ! of warnings HWGUI is now ready for MinGW64.
    ! TO-DO: 50 warnings must be fixed.
    !

2020-06-06 13:15 UTC+0200 Wilfried Brunken DF7BE
  * samples\testimage.prg
  * samples/Readme.txt
  * samples\dev\compiler\OpenWatcom\OpenWatcom.txt
  * makefile.wc
  * samples\dev\env\pfad_pc.bat (New)
  * make_pc.bat
  * makefile.pc 
  * samples\dev\compiler\Digital-Mars\Digital-Mars.txt (New)
  * samples/dev/compiler/PellesC/PellesC.txt (New)
  * samples\dev\env\pfad_dm.bat (New)
  * samples/dev/env/Readme.txt
    !
    ! testimage.prg:
    ! @ x, y BITMAP ... on GTK:
    ! Sample program updated.
    !
    ! Info's for Compiler Support added:
    ! Environment scripts only experimental status.
    ! Compiled against BCC build of Harbour,
    ! but fails. Should use HWGUI build with
    ! same compiler of Harbour build, because
    ! generated C source is otherwise incompatible.
    ! 
    ! Pelles C:
    ! Not possinble at this time,
    ! Harbour build crashes with 
    ! "Access violation".
    !
    ! Digital Mars C:
    ! No Harbour support.