@@ -1787,7 +1787,7 @@
     <br><strong class="subhead"> hwg_GetUTCTimeDate()</strong><br>
    Returns a string with date and time in UTC.<br>
    This function is platform independant.<br>
-   Output format is: W,YYYYMMDD-HHMMSS<br>
+   Output format is: W,YYYYMMDD-HH:MM:SS<br>
    W: Weekday: 0 = Sunday, 1 = Monday ... 6 = Saturday<br>
    Use the SUBSTR() function of Harbour to extract the desired
    information.
